; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_log.c_log_RegisterPrompt.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_log.c_log_RegisterPrompt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.prompt = type { i32, i32, %struct.prompt* }

@promptlist = common dso_local global %struct.prompt* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_RegisterPrompt(%struct.prompt* %0) #0 {
  %2 = alloca %struct.prompt*, align 8
  store %struct.prompt* %0, %struct.prompt** %2, align 8
  %3 = load %struct.prompt*, %struct.prompt** @promptlist, align 8
  %4 = load %struct.prompt*, %struct.prompt** %2, align 8
  %5 = getelementptr inbounds %struct.prompt, %struct.prompt* %4, i32 0, i32 2
  store %struct.prompt* %3, %struct.prompt** %5, align 8
  %6 = load %struct.prompt*, %struct.prompt** %2, align 8
  store %struct.prompt* %6, %struct.prompt** @promptlist, align 8
  %7 = load %struct.prompt*, %struct.prompt** %2, align 8
  %8 = getelementptr inbounds %struct.prompt, %struct.prompt* %7, i32 0, i32 0
  store i32 1, i32* %8, align 8
  %9 = load %struct.prompt*, %struct.prompt** %2, align 8
  %10 = getelementptr inbounds %struct.prompt, %struct.prompt* %9, i32 0, i32 1
  %11 = call i32 @log_DiscardAllLocal(i32* %10)
  ret void
}

declare dso_local i32 @log_DiscardAllLocal(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
